--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,17 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/contracts": "^9.46 || ^10.0",
+        "illuminate/contracts": "^10.0",
         "nuwave/lighthouse": "^6.0.0",
-        "pestphp/pest": "^1.22.3",
-        "pestphp/pest-plugin-laravel": "^1.3"
+        "pestphp/pest": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.0"
     },
     "require-dev": {
-        "nunomaduro/collision": "^6.4",
-        "nunomaduro/larastan": "^2.3.4",
+        "brianium/paratest": "^7.1",
+        "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.4",
         "orchestra/testbench": "^7.18 || ^8.0",
-
-        "pestphp/pest-plugin-parallel": "^1.2",
-        "worksome/coding-style": "^2.3.2"
+        "worksome/coding-style": "^2.5"
     },
     "autoload": {
         "psr-4": {
@@ -36,7 +35,6 @@
         }
     },
     "scripts": {
-        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
         "lint": "vendor/bin/ecs --fix",
         "test:coverage": "vendor/bin/pest -p --coverage",
         "test:types": "vendor/bin/phpstan analyse",
