--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/contracts": "^9.46",
+        "illuminate/contracts": "^9.46 || ^10.0",
         "nuwave/lighthouse": "dev-master",
         "pestphp/pest": "^1.22.3",
         "pestphp/pest-plugin-laravel": "^1.3"
@@ -25,11 +25,10 @@
     "require-dev": {
         "nunomaduro/collision": "^6.4",
         "nunomaduro/larastan": "^2.3.4",
-        "orchestra/testbench": "^7.18",
+        "orchestra/testbench": "^7.18 || ^8.0",
 
         "pestphp/pest-plugin-parallel": "^1.2",
-        "worksome/coding-style": "^2.3.2",
-        "worksome/pest-plugin-silence": "^0.1.2"
+        "worksome/coding-style": "^2.3.2"
     },
     "autoload": {
         "psr-4": {
