--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-.idea
+/.idea
+/build
+/vendor
+/.php_cs.cache
+/composer.lock
+/phpunit.xml
+/phpstan.neon
 .php_cs
 .php_cs.cache
-.phpunit.result.cache
-build
-composer.lock
+.phpunit.cache
+.php-cs-fixer.cache
 coverage
 docs
-phpunit.xml
-phpstan.neon
-testbench.yaml
-vendor
 node_modules
-.php-cs-fixer.cache
+testbench.yaml
