--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "illuminate/contracts": "^10.0 || ^11.0",
-        "nuwave/lighthouse": "^6.36",
-        "pestphp/pest": "^2.35 || ^3.0",
-        "pestphp/pest-plugin-laravel": "^2.3 || ^3.0"
+        "illuminate/contracts": "^11.0 || ^12.0",
+        "nuwave/lighthouse": "^6.44",
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0"
     },
     "require-dev": {
-        "nunomaduro/collision": "^7.10 || ^8.4",
-        "larastan/larastan": "^2.9",
-        "orchestra/testbench": "^8.26 || ^9.0",
-        "worksome/coding-style": "^2.11"
+        "larastan/larastan": "^3.1",
+        "nunomaduro/collision": "^7.10 || ^8.1.1",
+        "orchestra/testbench": "^9.12 || ^10.1",
+        "worksome/coding-style": "^3.2"
     },
     "autoload": {
         "psr-4": {
