feat: JIRA-15715 Add support for Pest 4
- Update composer.json to support pestphp/pest ^3.0 || ^4.0
- Update pestphp/pest-plugin-laravel to support ^3.0 || ^4.0
- Add version compatibility documentation to README
- Maintain PHP ^8.2 requirement for backward compatibility
- No breaking changes for existing users

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "php": "^8.2",
         "illuminate/contracts": "^11.0 || ^12.0",
         "nuwave/lighthouse": "^6.44",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "pestphp/pest": "^3.0 || ^4.0",
+        "pestphp/pest-plugin-laravel": "^3.0 || ^4.0"
     },
     "require-dev": {
         "larastan/larastan": "^3.1",
